Fixed the svg icons so that they are centered, added hover effect on both svgs and album covers

--- a/code/src/components/album.css
+++ b/code/src/components/album.css
@@ -1,20 +1,42 @@
 .albumContainer {
   width: 20%;
   margin: 10px;
-  justify-content: space-evenly;
+  position: relative;
 }
 
-.albumInfo {
-  position: relative;
+.albumWrapper:hover .albumCover {
+  opacity: 0.2;
+  transition: 0.3s ease-in-out;
+}
+.albumWrapper:hover .icons {
+  display: flex;
+  justify-content: space-evenly;
+  position: absolute;
+  margin: 0 auto;
+  width: 80%;
+  height: 25%;
+  top: 30%;
+  right: 0;
+  bottom: 0;
+  left: 0;
 }
 
 .albumCover {
   width: 100%;
+  max-height: 300px;
   object-fit: cover;
 }
 .albumTitle {
   font-size: 14px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Helvetica;
   color: #ffffff;
   text-decoration: none;
+  font-weight: bold;
+  margin-top: 10px;
+}
+.albumTitle:hover {
+  text-decoration: underline;
+}
+.icons {
+  display: none;
 }
