--- a/code/src/components/icons.css
+++ b/code/src/components/icons.css
@@ -1,24 +1,32 @@
 .playIcon {
-  width: 60px;
+  width: 50px;
   color: white;
-  filter: invert(1);
+  filter: invert(0.8);
+}
+.playIcon:hover {
+  cursor: pointer;
+  filter: invert(1.2);
+  transform: scale(1.2);
+  transition: 0.3s ease-in-out;
 }
 .heartIcon {
-  width: 40px;
+  width: 30px;
   color: white;
   filter: invert(0.8);
+}
+.heartIcon:hover {
+  cursor: pointer;
+  filter: invert(1);
 }
 .dotsIcon {
-  width: 40px;
+  width: 30px;
   color: white;
   filter: invert(0.8);
 }
-
-.icons {
-  position: absolute;
-  top: 50%;
-  left: 25%;
-  bottom: 50%;
+.dotsIcon:hover {
+  cursor: pointer;
+  filter: invert(1);
+}
+.icons:hover {
   align-items: center;
-  justify-content: space-around;
 }
